package edu.hitsz.basic;

public interface BasicObserver {
    public void response();
}
